Tue, 17 Jun 2008 14:49:12 +0200 <thp@perli.net>
Make handling pubDates a bit safer when reading it externally

	* src/gpodder/libpodcasts.py: Make handling of pubDates a bit more
	secure and easier
	* src/gpodder/gui.py: Add Daniel Ramos to list of donators and bug
	reporters

Sun, 15 Jun 2008 14:44:29 +0200 <thp@perli.net>
Merge "Allows user command execution after certain events" from Paul Rudkin

	* src/gpodder/config.py: Add two new configuration options:
	cmd_all_downloads_complete and cmd_download_complete
	* src/gpodder/download.py: Call the user-specific command when a
	download finishes (if configured)
	* src/gpodder/gui.py: If all downloads have been completed, execute
	the user-specific command (if configured)
	* src/gpodder/libgpodder.py: Add ext_command_thread function that
	handles calling an external command
	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=4)

Sun, 15 Jun 2008 14:23:40 +0200 <thp@perli.net>
Support tooltips for the episode list; improve tooltip appearance

	* src/gpodder/gui.py: Add tooltips to treeAvailable (episode list);
	avoid showing tooltips while the context menu of the treeChannels and
	treeAvailable is open, so the tooltip doesn't appear over the context
	menu; add Sebastian Krause to list of bug reporters
	* src/gpodder/util.py: Try to convert some HTML tags to text-only
	characters (<br> to newline, <li> to a "*", etc..) so the description
	of an episode is easier to read and looks more structured; also,
	convert more than two subsequent newlines to maximum two newlines
	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=126)

Sat, 14 Jun 2008 12:29:11 -0400 <me@nikosapi.org>
	* src/gpodder/libpodcasts.py: make LocalDBReader and LocalDBWriter
	read/save the episode mimetype attribute in the LocalDB. This 
	prevents the mimetype attribute from being set to 
	'application/octet-stream' after a file is downloaded.

Sat, 14 Jun 2008 18:50:29 +0200 <thp@perli.net>