@@ -1,3 +1,11 @@
+Tue, 17 Jun 2008 19:41:33 -0400 <me@nikosapi.org>
+Add 'Select All' and 'Select None' buttons to gPodderOpmlLister
+
+	* data/gpodder.glade: add 'Select All' and 'Select None' buttons to 
+	the the bottom-left of the gPodderOpmlLister window
+	* src/gpodder/gui.py: add button signal handlers and a function
+	( select_all(bool) ) to facilitate selecting all or no channels
+
 Tue, 17 Jun 2008 14:49:12 +0200 <thp@perli.net>
 Make handling pubDates a bit safer when reading it externally
 
